# kalla-rust

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.ci  Kalla-ui-design  Kalla-ui-design.pen  README.md  TODO.md  docker-compose.cluster.yml  docker-compose.ghcr.yml  docker-compose.scaled.yml  docker-compose.single.yml  docker-compose.yml  prompt.md  transcript-postgres.txt  transcript.txt
.github/workflows/: ci.yml
benchmarks/: callback_listener.py  callback_server.py  datagen.py  generate_data.py  inject_cluster_job.py  inject_scaled_job.py  run_benchmark.sh  run_cluster_benchmark.sh  run_scaled_benchmark.sh  seed_postgres.py  verify_ground_truth.py
benchmarks/scenarios/: batch_payments_1m.json  batch_payments_30k.json  cluster_postgres_100k.json  cluster_postgres_1m.json  cluster_postgres_50k.json  cluster_postgres_50k_filtered.json  cluster_postgres_5m.json  cross_match_100k.json  cross_match_10k.json  cross_match_1m.json  cross_match_30k.json  csv_100k.json  csv_100k_staged.json  csv_10k.json  csv_10k_95pct.json  csv_10k_full_match.json  csv_1m.json  csv_1m_staged.json  direct_postgres_100k.json  postgres_100k.json  postgres_100k_staged.json  postgres_10k.json  postgres_10m.json  postgres_1m.json  postgres_1m_staged.json  postgres_5m.json  scaled_postgres_100k.json  scaled_postgres_10m.json  scaled_postgres_1m.json  scaled_postgres_5m.json  split_payments_1m.json  split_payments_30k.json
crates/kalla-ai/: Cargo.toml
crates/kalla-ai/src/: client.rs  lib.rs  prompt.rs  schema_extractor.rs
crates/kalla-ballista/: Cargo.toml  Dockerfile
crates/kalla-ballista/src/: codec.rs  csv_range_scan_exec.rs  error.rs  lib.rs  postgres_scan_exec.rs  runner.rs  scan_lazy.rs  sources.rs
crates/kalla-cli/: Cargo.toml
crates/kalla-cli/src/: main.rs
crates/kalla-connectors/: Cargo.toml  README.md
crates/kalla-connectors/src/: bigquery.rs  csv_connector.rs  csv_partitioned.rs  error.rs  factory.rs  filter.rs  lib.rs  postgres.rs  postgres_connector.rs  postgres_partitioned.rs  s3.rs  scoped.rs  wire.rs
crates/kalla-core/: Cargo.toml
crates/kalla-core/src/: engine.rs  lib.rs  partitioned.rs  udf.rs
crates/kalla-evidence/: Cargo.toml
crates/kalla-evidence/src/: lib.rs  schema.rs  store.rs
crates/kalla-recipe/: Cargo.toml
crates/kalla-recipe/src/: field_resolver.rs  lib.rs  resolve.rs  schema.rs  schema_validation.rs  transpiler.rs  validation.rs
crates/kalla-recipe/tests/: priority2_features.rs
crates/kalla-worker/: Cargo.toml  Dockerfile
crates/kalla-worker/src/: config.rs  exec.rs  health.rs  heartbeat.rs  http_api.rs  job_loop.rs  main.rs  metrics.rs  queue.rs  reaper.rs  stage.rs
crates/kallad/: Cargo.toml
crates/kallad/src/: main.rs
docs/: api-reference.md  architecture.excalidraw  deployment-guide.md  deployment.md  openapi-runner.yaml  openapi-web.yaml  rust-architecture-review.md  team-prompt.md
docs/plans/: 2025-02-01-docker-build-optimization-design.md  2026-01-26-priority-2-adoption-improvements.md  2026-01-27-priority-1-features.md  2026-02-04-agentic-layer-state-machine-design.md  2026-02-04-agentic-recipe-builder-design.md  2026-02-04-fix-agent-backend-url.md  2026-02-04-fix-transcript-issues.md  2026-02-04-reliable-dev-setup.md  2026-02-05-markdown-to-html-rendering.md  2026-02-14-worker-autoscaling-design.md  2026-02-14-worker-autoscaling-impl.md  2026-02-15-architecture-review-design.md  2026-02-15-architecture-review-impl.md  2026-02-15-file-upload-design.md  2026-02-15-file-upload-impl.md  2026-02-17-ballista-cluster-mode.md  2026-02-17-ballista-distributed-execution.md  2026-02-17-unified-kallad-binary-design.md  2026-02-17-unified-kallad-binary.md  2026-02-18-complex-match-patterns-impl.md  2026-02-18-scale-benchmark-suite-design.md  2026-02-18-wizard-ux-redesign-impl.md  2026-02-18-wizard-ux-redesign.md  2026-02-22-mcp-ai-architecture-design.md  2026-02-22-mcp-ai-phase1-impl.md  2026-02-22-phase3-screen3-design.md  2026-02-22-phase3-screen3-impl.md  2026-02-22-phase4-screens4-5-design.md  2026-02-22-phase4-screens4-5-impl.md  2026-02-23-screen2-v2-design.md  2026-02-23-screen2-v2-impl-plan.md  2026-02-25-scoped-loader-trait-design.md  2026-02-25-scoped-loader-trait.md  2026-02-25-separate-metadata-from-connector-pool.md
k8s/: api-server.yaml  ballista-executor.yaml  ballista-scheduler.yaml  keda-triggers.yaml  nats.yaml  worker.yaml
kalla-mcp/: package-lock.json  package.json
kalla-mcp/src/: index.ts  server.ts
kalla-mcp/src/llm/: client.ts  prompts.ts
kalla-mcp/src/tools/: build-recipe.ts  detect-field-mappings.ts  infer-rules.ts  nl-to-sql.ts  parse-nl-filter.ts  preview-match.ts
kalla-mcp/src/types/: schemas.ts  tool-io.ts
kalla-server/: Cargo.toml  Dockerfile
kalla-server/src/: main.rs  nats_publisher.rs  worker.rs
kalla-server/tests/: api_edge_cases_test.rs  reconciliation_test.rs
kalla-web/: .dockerignore  Dockerfile  jest.config.mjs  package-lock.json  package.json  playwright.config.ts
kalla-web/__tests__/: e2e-conversation.test.ts  upload-chat-flow.test.ts  upload-flow.test.ts
kalla-web/e2e/: helpers.ts  scenario-1-full-flow.spec.ts  scenario-2-source-discovery.spec.ts  scenario-3-session-management.spec.ts  scenario-4-error-states.spec.ts
kalla-web/src/__mocks__/: react-markdown.tsx  remark-gfm.ts
kalla-web/src/__tests__/: CollapsedSourcesBar.test.tsx  ExpandedSourceCards.test.tsx  SampleDataV2.test.tsx  SamplePreviewV2.test.tsx  SmartFilter.test.tsx  agent-tools-coverage.test.ts  agent-tools.test.ts  ai-client.test.ts  api.test.ts  chat-components.test.tsx  components.test.tsx  intent-detection.test.ts  markdown-renderer.test.tsx  orchestrator.test.ts  pages.test.tsx  phase-config.test.ts  reconcile-coverage.test.tsx  register-csv-route.test.ts  session-store-coverage.test.ts  session-store.test.ts  sources-coverage.test.tsx  upload-client.test.ts  upload-components.test.tsx  wizard-context.test.tsx  wizard-types-v2.test.ts  (+1 more)
scripts/: generate-test-data.ts  init.sql  minikube-autoscale.sh  release.sh
testdata/: invoices.csv  payments.csv  recipe.json
(+79 files in other folders)
