[package]
name = "kalla-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API server for Kalla reconciliation engine"

[[bin]]
name = "kalla-server"
path = "src/main.rs"

[dependencies]
kalla-core.workspace = true
kalla-connectors.workspace = true
kalla-recipe.workspace = true
kalla-evidence.workspace = true
kalla-ai.workspace = true
datafusion.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
url.workspace = true
arrow.workspace = true
async-nats.workspace = true
futures = "0.3"

[dev-dependencies]
reqwest.workspace = true
