[package]
name = "kalla-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM integration for natural language to recipe generation"

[dependencies]
kalla-core.workspace = true
kalla-recipe.workspace = true
datafusion.workspace = true
arrow.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
