[package]
name = "kalla-ballista"
version.workspace = true
edition.workspace = true

[dependencies]
datafusion.workspace = true
ballista.workspace = true
ballista-scheduler.workspace = true
ballista-executor.workspace = true
datafusion-proto.workspace = true
arrow.workspace = true
sqlx.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait = "0.1"
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
object_store = { version = "0.11", features = ["aws"] }
url.workspace = true

kalla-connectors.workspace = true
kalla-core.workspace = true

[[bin]]
name = "kalla-scheduler"
path = "src/bin/kalla-scheduler.rs"

[[bin]]
name = "kalla-executor"
path = "src/bin/kalla-executor.rs"
