[package]
name = "kalla-ballista"
version.workspace = true
edition.workspace = true

[dependencies]
datafusion.workspace = true
ballista.workspace = true
ballista-core.workspace = true
ballista-scheduler.workspace = true
ballista-executor.workspace = true
datafusion-proto.workspace = true
arrow.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait = "0.1"
futures = "0.3"
serde.workspace = true
url.workspace = true

axum.workspace = true
reqwest.workspace = true
uuid.workspace = true
prometheus-client.workspace = true

kalla-connectors.workspace = true
kalla-core.workspace = true
kalla-recipe.workspace = true
kalla-evidence.workspace = true
