[package]
name = "kalla-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Kalla reconciliation engine"

[[bin]]
name = "kalla"
path = "src/main.rs"

[dependencies]
kalla-core.workspace = true
kalla-connectors.workspace = true
kalla-recipe.workspace = true
kalla-evidence.workspace = true
kalla-ai.workspace = true
datafusion.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
