[package]
name = "kalla-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Data source connectors (Postgres, S3, BigQuery) for Kalla"

[dependencies]
kalla-core.workspace = true
datafusion.workspace = true
arrow.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1"
