[package]
name = "kalla-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Data source connectors (Postgres, S3 CSV) for Kalla"

[dependencies]
kalla-core.workspace = true
datafusion.workspace = true
arrow.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
url.workspace = true
async-trait = "0.1"
object_store = { version = "0.11", features = ["aws"] }
csv = "1"
futures = "0.3"
serde_json = { workspace = true }

[dev-dependencies]
parquet.workspace = true
tempfile = "3"
