[package]
name = "kalla-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core DataFusion engine and UDFs for Kalla reconciliation"

[dependencies]
datafusion.workspace = true
ballista.workspace = true
arrow.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
datafusion-proto.workspace = true
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
futures = "0.3"
