[package]
name = "kalla-evidence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Evidence store and reporting for Kalla reconciliation results"

[dependencies]
kalla-core.workspace = true
datafusion.workspace = true
arrow.workspace = true
parquet.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
