[package]
name = "kalla-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Distributed worker for Kalla reconciliation jobs"

[[bin]]
name = "kalla-worker"
path = "src/main.rs"

[dependencies]
kalla-core.workspace = true
kalla-connectors.workspace = true
kalla-recipe.workspace = true
kalla-evidence.workspace = true
datafusion.workspace = true
arrow.workspace = true
parquet.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
url.workspace = true
chrono.workspace = true
async-nats.workspace = true
prometheus-client.workspace = true
futures = "0.3"
object_store = { version = "0.11", features = ["aws"] }

[dev-dependencies]
tempfile = "3"
http = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
